[gd_scene load_steps=28 format=3 uid="uid://cni7yxupw65vm"]

[ext_resource type="Script" path="res://Scene/Script/SceneCorridorD.gd" id="1_4u1rk"]
[ext_resource type="PackedScene" uid="uid://cd46q6imydlml" path="res://Carte/CarteScene/MapCorridorDroit.tscn" id="1_a1ec1"]
[ext_resource type="PackedScene" uid="uid://tki2apulyx4e" path="res://Joueur/joueur.tscn" id="3_6k4ns"]
[ext_resource type="PackedScene" uid="uid://i0y3uc5jfcuj" path="res://UI/menu_pause.tscn" id="4_iumqj"]
[ext_resource type="Texture2D" uid="uid://b3cad43imn7o1" path="res://Carte/Modern+ Study Time (32x32)/doors_school.png" id="5_hnol3"]
[ext_resource type="PackedScene" uid="uid://c81mpte26ou7w" path="res://UI/tuile_boite_de_texte.tscn" id="6_4on1q"]
[ext_resource type="Texture2D" uid="uid://idnl1hauh4uk" path="res://UI/Keyboard Letters and Symbols.png" id="6_x8x2n"]
[ext_resource type="Texture2D" uid="uid://ghodvn6lgtdd" path="res://UI/image/iconCerveau.png" id="7_x3e3o"]
[ext_resource type="Texture2D" uid="uid://dcq5j6taqvth8" path="res://UI/sprite_0.png" id="8_bk6qr"]
[ext_resource type="PackedScene" uid="uid://blychabk2ucx7" path="res://Personne/ennemie_un.tscn" id="9_0c2kk"]
[ext_resource type="PackedScene" uid="uid://c50yeq1k8yita" path="res://UI/boite_de_textes.tscn" id="10_lsojb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgyxe"]
size = Vector2(28.5, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ou3rk"]
size = Vector2(64, 14)

[sub_resource type="Animation" id="Animation_asxp4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Porte:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [51]
}

[sub_resource type="Animation" id="Animation_wlxao"]
resource_name = "ouverture"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Porte:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [51, 63, 75, 87]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_klxjr"]
_data = {
"RESET": SubResource("Animation_asxp4"),
"ouverture": SubResource("Animation_wlxao")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3x236"]
size = Vector2(70, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iw3m1"]
size = Vector2(20, 124)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w32bw"]
size = Vector2(64, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vdm6"]
size = Vector2(1, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vp0qt"]
size = Vector2(59, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bmxyd"]
size = Vector2(20, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gc5pr"]
size = Vector2(76, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_caydt"]
size = Vector2(72, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbssc"]
size = Vector2(9, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gdpx"]
size = Vector2(74, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iv24r"]
size = Vector2(14, 49)

[node name="SceneCorridorD" type="Node2D"]
position = Vector2(600, 428)
script = ExtResource("1_4u1rk")

[node name="MenuPause" parent="." instance=ExtResource("4_iumqj")]
position = Vector2(-131, -158)

[node name="StaticBody2D" parent="." instance=ExtResource("1_a1ec1")]

[node name="DversM" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DversM"]
position = Vector2(-500, -39)
shape = SubResource("RectangleShape2D_wgyxe")

[node name="Porte4823" type="Area2D" parent="."]

[node name="Porte" type="Sprite2D" parent="Porte4823"]
texture_filter = 1
position = Vector2(-320, -325)
scale = Vector2(2.21875, 2.2475)
texture = ExtResource("5_hnol3")
hframes = 12
vframes = 8
frame = 51

[node name="Zone" type="CollisionShape2D" parent="Porte4823"]
position = Vector2(-320, -248)
shape = SubResource("RectangleShape2D_ou3rk")

[node name="AnimationPorte4823" type="AnimationPlayer" parent="Porte4823"]
libraries = {
"": SubResource("AnimationLibrary_klxjr")
}

[node name="F" type="Sprite2D" parent="Porte4823"]
visible = false
texture_filter = 1
position = Vector2(-318, -388)
scale = Vector2(2, 2)
texture = ExtResource("6_x8x2n")
hframes = 8
vframes = 14
frame = 21

[node name="AttentePorte" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PorteBossDeux" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PorteBossDeux"]
position = Vector2(376, -253)
shape = SubResource("RectangleShape2D_3x236")

[node name="LaPorteBossUn" type="Sprite2D" parent="PorteBossDeux"]
texture_filter = 1
position = Vector2(376, -325)
scale = Vector2(2.2, 2.2)
texture = ExtResource("5_hnol3")
hframes = 12
vframes = 8

[node name="F" type="Sprite2D" parent="PorteBossDeux"]
visible = false
texture_filter = 1
position = Vector2(321, -344)
scale = Vector2(2, 2)
texture = ExtResource("6_x8x2n")
hframes = 8
vframes = 14
frame = 21

[node name="MessageBoss" type="Node2D" parent="."]
visible = false

[node name="Tuile_boite_de_texte" parent="MessageBoss" instance=ExtResource("6_4on1q")]
scale = Vector2(2, 2)
layer_0/tile_data = PackedInt32Array(-327684, 1179649, 1, -262148, 1179649, 1, -327683, 1245185, 1, -262147, 1245185, 1, -65540, 393217, 0, -4, 393217, 1, -65539, 458753, 0, -3, 458753, 1, -65538, 524289, 0, -2, 524289, 1, -65537, 589825, 0, -1, 589825, 1, -131072, 655361, 0, -65536, 655361, 1, -131071, 1638401, 1, -65535, 720897, 1, -327682, 1310721, 1, -262146, 1376257, 1, -327681, 1376257, 1, -262145, 1441793, 1, -393216, 1572865, 1, -327680, 1507329, 1, -393215, 1638401, 1, -327679, 1638401, 1, -262143, 1638401, 1, -196607, 1638401, 1, -131075, 524289, 0, -131074, 1376257, 1, -196611, 524289, 0, -196610, 1376257, 1, -196609, 1441793, 1, -262144, 1507329, 1, -131073, 1441793, 1, -196608, 1507329, 1, -131076, 393217, 0, -196612, 393217, 0, -393220, 1179649, 0, -393219, 1245185, 0, -393218, 1310721, 0, -393217, 1376257, 0, -458752, 1572865, 0, -458751, 1638401, 0)

[node name="btnRetour" type="Button" parent="MessageBoss"]
offset_left = -18.0
offset_top = -52.0
offset_right = 43.0
offset_bottom = -21.0
text = "Retour"

[node name="btnCombat" type="Button" parent="MessageBoss"]
offset_left = -107.0
offset_top = -52.0
offset_right = -22.0
offset_bottom = -21.0
disabled = true
text = "Combatre"

[node name="Prérequis" type="Label" parent="MessageBoss"]
offset_left = -67.0
offset_top = -194.0
offset_right = 8.0
offset_bottom = -168.0
text = "Prérequis
"

[node name="IconCerveau" type="Sprite2D" parent="MessageBoss"]
texture_filter = 1
position = Vector2(-84, -151)
texture = ExtResource("7_x3e3o")

[node name="IconeHorloge" type="Sprite2D" parent="MessageBoss"]
position = Vector2(-83.0001, -109)
scale = Vector2(0.4, 0.4)
texture = ExtResource("8_bk6qr")

[node name="InteligenceRequis" type="TextEdit" parent="MessageBoss"]
offset_left = -57.0
offset_top = -167.0
offset_right = 39.0
offset_bottom = -132.0
text = "Niveau 4+"
editable = false

[node name="NomBoss" type="Label" parent="MessageBoss"]
offset_left = -69.0
offset_top = -208.0
offset_right = 10.0
offset_bottom = -182.0
text = "Boss : Martin"

[node name="TempsRequis" type="TextEdit" parent="MessageBoss"]
offset_left = -57.0
offset_top = -129.0
offset_right = 38.0
offset_bottom = -92.0
text = "Temps à 0"
editable = false

[node name="versBureauProf" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="versBureauProf"]
position = Vector2(497, -41)
shape = SubResource("RectangleShape2D_iw3m1")

[node name="EnnemieUn" parent="." instance=ExtResource("9_0c2kk")]
visible = false
position = Vector2(307, -256)
scale = Vector2(5, 5)

[node name="Joueur" parent="." instance=ExtResource("3_6k4ns")]
position = Vector2(-317, -267)

[node name="BoiteDeTextes" parent="." instance=ExtResource("10_lsojb")]
position = Vector2(-602, -428)

[node name="colissionMartin" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="colissionMartin"]
position = Vector2(289, -227)
shape = SubResource("RectangleShape2D_w32bw")

[node name="BlockagePorte" type="StaticBody2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(358.5, -209)
shape = SubResource("RectangleShape2D_7vdm6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(387.5, -196.5)
shape = SubResource("RectangleShape2D_vp0qt")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(409, -221)
shape = SubResource("RectangleShape2D_bmxyd")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(397, -244.5)
shape = SubResource("RectangleShape2D_gc5pr")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(-319, -240)
shape = SubResource("RectangleShape2D_caydt")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(-291.5, -217.5)
shape = SubResource("RectangleShape2D_jbssc")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(-315, -197)
shape = SubResource("RectangleShape2D_4gdpx")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="BlockagePorte"]
position = Vector2(-344, -215.5)
shape = SubResource("RectangleShape2D_iv24r")

[connection signal="sauvegarder" from="MenuPause" to="Joueur" method="_on_menu_pause_sauvegarder"]
[connection signal="body_entered" from="DversM" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Porte4823" to="." method="_on_porte_4823_body_entered"]
[connection signal="body_exited" from="Porte4823" to="." method="_on_porte_4823_body_exited"]
[connection signal="timeout" from="AttentePorte" to="." method="_on_attente_porte_timeout"]
[connection signal="body_entered" from="PorteBossDeux" to="." method="_on_porte_boss_un_body_entered"]
[connection signal="body_exited" from="PorteBossDeux" to="." method="_on_porte_boss_un_body_exited"]
[connection signal="pressed" from="MessageBoss/btnRetour" to="." method="_on_btn_retour_pressed"]
[connection signal="pressed" from="MessageBoss/btnCombat" to="." method="_on_btn_combat_pressed"]
[connection signal="body_entered" from="versBureauProf" to="." method="_on_vers_bureau_prof_body_entered"]
